# falcon-manager

./: .air.toml  .dockerignore  .gitignore  .vimspector.json  Dockerfile  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  generate-keys.sh  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  readme.md  run-dev.sh  seed.sql  tsconfig.json
.github/workflows/: push-docker-image.yaml
apps/doc-generator/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/keystone/: .dockerignore  Dockerfile  package-lock.json  package.json  schema.graphql  schema.prisma  storage.ts
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20220115173131_initial_migration.down.sql  20220115173131_initial_migration.up.sql
backend/migrations/2022-01-09-202337_initial_migrations/: down.sql  up.sql
backend/src/: main.rs  schema.rs
cmd/httpsrv/: main.go
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/: app.html  hooks.ts
frontend/static/: manifest.json
internal/ports/: account-store.go
migrations/: 000001_init_schema.up.sql  000001_initial_migration.down.sql  000001_initial_migration.up.sql
pages/: falcon-form.html  falcon.html  falcons.html  index.html  layout.html
prisma/: schema.prisma  seed.js  seed.ts
prisma/seeds/: falcons.ts  roles-and-permissions.js  roles-and-permissions.ts  users.js  users.ts
src/: app.d.ts  hooks.ts
src/lib/: auth.ts  config.ts  loadFalconFormData.ts  roles.enum.ts
src/routes/: __layout.svelte  index.svelte
(+68 files in other folders)
