[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.4", features = ["postgres"] }
serde = { version = "1.0.123", features = ["derive"] }

[dependencies.rocket_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.1.0-rc"
features = ["sqlx_postgres"]
