[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "time", "runtime-actix-native-tls" ] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
futures = "0.3.13"
